[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-adfs"
version = "1.0.0"
description = "Python module for interacting with Microsoft ADFS and OIDC at ease"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
authors = [
    { name = "Yedidya Rosenstark", email = "yedidya.rosenstark@gmail.com" },
]
dependencies = [
    "requests",
    "pyjwt>=2.12.0",
    "aiohttp",
    "cryptography",
    "pydantic-settings",
    "pydantic>=2.0",
    "typing_extensions>=4.0.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "build",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "pytest-asyncio",
    "pytest-cov",
    "pytest",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["pyadfs*"]
exclude = ["tests*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
ensure_newline_before_comments = true
wrap_length = 3

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.pylint]
max-line-length = 120
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "C0209",
    "C0301",
    "R0801",
    "R0902",
    "R0903",
    "R0913",
    "R0917",
    "W0718",
    "W1203",
]

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]
